--- a/thirdparity/CMakeLists.txt
+++ b/thirdparity/CMakeLists.txt
@@ -1,1 +1,1 @@
-execute_process ( COMMAND make WORKING_DIRECTORY ${LIBLINEAR_DIR} )
+execute_process ( COMMAND make lib WORKING_DIRECTORY ${LIBLINEAR_DIR} )
