--- a/thirdparity/CMakeLists.txt
+++ b/thirdparity/CMakeLists.txt
@@ -1,2 +1,2 @@
 execute_process ( COMMAND make lib WORKING_DIRECTORY ${LIBLINEAR_DIR} )
-execute_process ( COMMAND make libptools.so WORKING_DIRECTORY ${PICKLINGTOOLS_DIR} )
+execute_process ( COMMAND ln -s liblinear.so.3 liblinear.so WORKING_DIRECTORY ${LIBLINEAR_DIR} )
