--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@
 #
 cmake_minimum_required (VERSION 2.8)
 project (cpp-libshorttext)
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DOC_NEW_STYLE_INCLUDES") # PicklingTools170Release required
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 
 set (APPLICATION_NAME "cpp-libshorttext")
 set (APPLICATION_CODENAME "${PROJECT_NAME}")
